--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ button.destructive:hover {
 
 .list-item:hover {
   background-color: #f7f8fb;
-  transform: translateY(-2px);
+  /* transform: translateY(-2px); */
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   transition: background-color 250ms;
 }
